# libcper

./: .clang-tidy  Cpad-guid.c  Cper.c  OWNERS  README.md  base64.c  base64.h  common-utils.c  common-utils.h  cpad-parse.c  cper-parse-str.h  cper-parse.c  cper-parse.h  cper-parse.i  cper-utils.c  cper-utils.h  ir-parse-cpad.c  ir-parse.c  json-schema.c  json-schema.h  log.c  memCperSamplePoC.cper  memCperSourcePoC.json  meson.build  meson.options  parse_example.py  project.config  pycper.c  pyproject.toml
cli-app/: cpad-convert.c  cper-convert.c
dbus/: .clang-tidy  main.cpp  meson.build
dbus/systemd/: xyz.openbmc_project.CPERRepository1.service.in
dbus/systemd/dbus/: xyz.openbmc_project.CPERRepository1.conf  xyz.openbmc_project.CPERRepository1.service
docs/: GeneratorExtensions.md  OEMExtensions.md
edk/: BaseTypes.h  Cper.c  Cper.h
examples/: arm-ras.cperhex  arm-ras.json  arm.cper  arm.cperhex  arm.json  ccixper.cper  ccixper.cperhex  ccixper.json  cxlcomponent-media.cper  cxlcomponent-media.cperhex  cxlcomponent-media.json  cxlprotocol.cper  cxlprotocol.cperhex  cxlprotocol.json  dmargeneric.cper  dmargeneric.cperhex  dmargeneric.json  dmariommu.cper  dmariommu.cperhex  dmariommu.json  dmarvtd.cper  dmarvtd.cperhex  dmarvtd.json  firmware.cper  firmware.cperhex  firmware.json  generic.cper  generic.cperhex  generic.json  ia32x64.cper  ia32x64.cperhex  ia32x64.json  memory-validation-bits.cperhex  memory-validation-bits.json  memory.cper  memory.cperhex  memory.json  memory2.cper  memory2.cperhex  memory2.json  (+24 more)
generator/: README.md  cpad-generate-cli.c  cpad-generate.c  cper-generate-cli.c  cper-generate.c  cper-generate.h  gen-utils.c  gen-utils.h
generator/sections/: gen-cpad-section-os-generic.c  gen-cpad-section.c  gen-section-amd.c  gen-section-ampere.c  gen-section-arm-ras.c  gen-section-arm.c  gen-section-ccix-per.c  gen-section-custom.c  gen-section-cxl-component.c  gen-section-cxl-protocol.c  gen-section-dmar.c  gen-section-firmware.c  gen-section-generic.c  gen-section-ia32x64.c  gen-section-memory.c  gen-section-nvidia-events.c  gen-section-nvidia.c  gen-section-pci-bus.c  gen-section-pci-dev.c  gen-section-pcie.c  gen-section-platform-action-event.c  gen-section.c  gen-section.h
include/libcper/: BaseTypes.h  Cpad.h  Cper.h  base64.h  common-utils.h  cpad-parse-str.h  cpad-parse.h  cper-parse-str.h  cper-parse.h  cper-utils.h  log.h  meson.build
include/libcper/edk/: Cper.h
include/libcper/generator/: cpad-generate.h  cper-generate.h  gen-utils.h
include/libcper/generator/sections/: gen-cpad-section.h  gen-section.h
include/libcper/sections/: cpad-section-os-generic.h  cpad-section.h  cper-section-ampere.h  cper-section-arm-ras.h  cper-section-arm.h  cper-section-ccix-per.h  cper-section-cxl-component.h  cper-section-cxl-protocol.h  cper-section-dmar-generic.h  cper-section-dmar-iommu.h  cper-section-dmar-vtd.h  cper-section-firmware.h  cper-section-generic.h  cper-section-ia32x64.h  cper-section-info-ppr.h  cper-section-ipf.h  cper-section-memory.h  cper-section-nvidia-events.h  cper-section-nvidia.h  cper-section-pci-bus.h  cper-section-pci-dev.h  cper-section-pcie.h  cper-section-platform-action-event.h  cper-section.h
sections/: cpad-section-os-generic.c  cpad-section.c  cper-section-ampere.c  cper-section-ampere.h  cper-section-arm-ras.c  cper-section-arm.c  cper-section-arm.h  cper-section-ccix-per.c  cper-section-ccix-per.h  cper-section-cxl-component.c  cper-section-cxl-component.h  cper-section-cxl-protocol.c  cper-section-cxl-protocol.h  cper-section-dmar-generic.c  cper-section-dmar-generic.h  cper-section-dmar-iommu.c  cper-section-dmar-iommu.h  cper-section-dmar-vtd.c  cper-section-dmar-vtd.h  cper-section-firmware.c  cper-section-firmware.h  cper-section-generic.c  cper-section-generic.h  cper-section-ia32x64.c  cper-section-ia32x64.h  cper-section-info-ppr.c  cper-section-ipf.c  cper-section-ipf.h  cper-section-memory.c  cper-section-memory.h  cper-section-nvidia-events.c  cper-section-nvidia.c  cper-section-nvidia.h  cper-section-pci-bus.c  cper-section-pci-bus.h  cper-section-pci-dev.c  cper-section-pci-dev.h  cper-section-pcie.c  cper-section-pcie.h  cper-section-platform-action-event.c  (+2 more)
specification/json/: cper-json-full-log.json  cper-json-header.json  cper-json-section-descriptor.json  cper-json-section-log.json  default.profraw
specification/json/common/: cper-json-error-status.json
specification/json/sections/: cper-ampere.json  cper-arm-processor.json  cper-arm-ras.json  cper-ccix-per.json  cper-cxl-component.json  cper-cxl-protocol.json  cper-firmware.json  cper-generic-dmar.json  cper-generic-processor.json  cper-ia32x64-processor.json  cper-iommu-dmar.json  cper-memory.json  cper-memory2.json  cper-nvidia-event-data-gpu-init-metadata.json  cper-nvidia-event-data-gpu-legacy-xid.json  cper-nvidia-event-data-gpu-metadata.json  cper-nvidia-event-data-gpu-recommended-actions.json  cper-nvidia-event-data-opaque.json  cper-nvidia-event-data-type1.json  cper-nvidia-event-data-type2.json  cper-nvidia-event-data-type3.json  cper-nvidia-event-data-type4.json  cper-nvidia-event-info-cpu.json  cper-nvidia-event-info-gpu.json  cper-nvidia-event.json  cper-nvidia.json  cper-pci-bus.json  cper-pci-component.json  cper-pcie-aerInfo.json  cper-pcie-capabilityStructure.json  cper-pcie.json  cper-unknown.json  cper-vtd-dmar.json
subprojects/: json-c.wrap
subprojects/packagefiles/json-c/: meson.build
subprojects/packagefiles/json-c/config/: meson.build
subprojects/packagefiles/jsoncdac/: meson.build
tests/: base64_test.c  base64_test.cpp  base64_test.h  fuzz_base64_encode.cpp  fuzz_cper_buf_section_to_ir.cpp  fuzz_cper_buf_to_ir.cpp  hex_test.c  hex_test.h  ir-tests.c  ir-tests.cpp  meson.build  test-utils.c  test-utils.cpp  test-utils.hpp
tests/schemavalidator/: LICENSE  meson.build  output.c  validate.c  validate.h
