install_headers(
    'base64.h',
    'cper-parse.h',
    'cper-parse-str.h',
    'cper-utils.h',
    'common-utils.h',
    'json-schema.h',
    'edk/BaseTypes.h',
    'edk/Cper.h',
    'sections/cper-section-dmar-vtd.h',
    'sections/cper-section-ipf.h',
    'sections/cper-section-firmware.h',
    'sections/cper-section-pcie.h',
    'sections/cper-section-arm.h',
    'sections/cper-section-pci-bus.h',
    'sections/cper-section-ccix-per.h',
    'sections/cper-section-ampere.h',
    'sections/cper-section-dmar-iommu.h',
    'sections/cper-section-memory.h',
    'sections/cper-section-dmar-generic.h',
    'sections/cper-section-cxl-protocol.h',
    'sections/cper-section-pci-dev.h',
    'sections/cper-section-ia32x64.h',
    'sections/cper-section.h',
    'sections/cper-section-nvidia.h',
    'sections/cper-section-generic.h',
    'sections/cper-section-cxl-component.h',
    'generator/cper-generate.h',
    'generator/sections/gen-section.h',
    'generator/gen-utils.h',
    subdir: 'libcper',
    preserve_path : true
)
