install_headers(
    'BaseTypes.h',
    'Cper.h',
    'cper-parse.h',
    'cper-parse-str.h',
    'cper-utils.h',
    'common-utils.h',
    'sections/cper-section-ampere.h',
    'sections/cper-section-arm.h',
    subdir: 'libcper',
    preserve_path : true
)

install_headers('generator/cper-generate.h', subdir: 'libcper/generator')